--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
 body {
+  cursor: url(cursor.png) 4 12, auto;
+}
+
+body {
   font-size: 1.5em;
   font-family: "Pacifico", cursive;
   width: 80%;
@@ -16,6 +20,12 @@ nav {
   justify-content: space-around;
   width: 50%;
   background-color: rgb(186, 186, 186);
+}
+
+@media screen and (max-width: 1100px) {
+  #navLinks {
+    flex-direction: column;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
