--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-body {
-  cursor: url(cursor.png) 4 12, auto;
+* {
+  cursor: url(src/cursor.png) 9 1, pointer;
+  font-family: "Pacifico", cursive;
 }
 
 body {
-  font-size: 1.5em;
-  font-family: "Pacifico", cursive;
   width: 80%;
+  font-size: 1.5em;
   margin: auto;
   text-align: center;
 }
