--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,34 @@
   font-family: "Pacifico", cursive;
 }
 
+html {
+  background: linear-gradient(to top, rgb(16, 233, 86), black);
+}
+
 body {
   width: 80%;
   font-size: 1.5em;
   margin: auto;
   text-align: center;
+}
+
+#divTitle {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+#divTitle img {
+  width: 120%;
+}
+#divTitle #presentation {
+  position: absolute;
+  top: 30%;
+  left: 15%;
+  width: 50%;
+  border-radius: 50px;
+  padding: 2% 10%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: rgb(16, 233, 86);
 }
 
 nav {
