--- a/styles.scss
+++ b/styles.scss
@@ -4,18 +4,48 @@
 
 }
 
+html {
+    background: linear-gradient(to top,
+            rgb(16, 233, 86), black);
+}
+
 body {
     width: 80%;
     font-size: 1.5em;
     margin: auto;
     text-align: center;
 
+
 }
 
+#divTitle {
+
+    position: relative;
+    display: flex;
+    justify-content: center;
+
+
+
+    img {
+        width: 120%;
+    }
+
+    #presentation {
+        position: absolute;
+        top: 30%;
+        left: 15%;
+        width: 50%;
+        border-radius: 50px;
+        padding: 2% 10%;
+        background-color: rgba(0, 0, 0, 0.7);
+        color: rgba(16, 233, 86, 1)
+    }
+}
 
 nav {
     display: flex;
     justify-content: space-between;
+
 }
 
 
@@ -24,7 +54,6 @@ nav {
     justify-content: space-around;
     width: 50%;
     background-color: rgb(186, 186, 186);
-
 }
 
 @media screen and (max-width: 1100px) {
