--- a/styles.scss
+++ b/styles.scss
@@ -6,7 +6,7 @@
 
 html {
     background: linear-gradient(to top,
-            rgb(16, 233, 86), black);
+            darkgreen, rgb(16, 233, 86), black, rgb(16, 233, 86), darkgreen);
 }
 
 body {
