--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 html {
-  background: linear-gradient(to top, rgb(16, 233, 86), black);
+  background: linear-gradient(to top, darkgreen, rgb(16, 233, 86), black, rgb(16, 233, 86), darkgreen);
 }
 
 body {
