--- a/styles.css
+++ b/styles.css
@@ -8,46 +8,86 @@ html {
 }
 
 body {
-  width: 80%;
+  margin-top: 100px;
   font-size: 1.5em;
-  margin: auto;
   text-align: center;
+}
+
+section {
+  width: 80%;
+  margin: auto;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(16, 233, 86);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100px;
+  z-index: 100;
+}
+header img {
+  height: 75%;
+  margin-left: 2%;
+}
+header nav {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 #divTitle {
   position: relative;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 #divTitle img {
   width: 120%;
 }
 #divTitle #presentation {
   position: absolute;
-  top: 30%;
-  left: 15%;
-  width: 50%;
-  border-radius: 50px;
-  padding: 2% 10%;
-  background-color: rgba(0, 0, 0, 0.7);
   color: rgb(16, 233, 86);
 }
-
-nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-#navLinks {
-  display: flex;
-  justify-content: space-around;
-  width: 50%;
-  background-color: rgb(186, 186, 186);
+#divTitle #presentation h1 {
+  margin-top: 0;
+  font-size: 3em;
+  background: linear-gradient(to right, white, rgb(16, 233, 86), darkgreen, rgb(16, 233, 86), white);
+  -webkit-background1-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
 }
 
 @media screen and (max-width: 1100px) {
-  #navLinks {
+  * {
+    font-size: 80%;
+  }
+  header {
+    height: 150px;
+  }
+  header nav {
     flex-direction: column;
+    list-style-image: url(src/fleche.png);
+  }
+  #divTitle #presentation {
+    border-radius: 50px;
+    padding: 2% 5%;
+    background-color: rgba(25, 25, 25, 0.25);
+  }
+  body {
+    margin-top: 150px;
+  }
+}
+@media screen and (min-width: 1101px) {
+  nav {
+    list-style: none;
   }
 }
 
