--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   margin-top: 100px;
   font-size: 1.5em;
   text-align: center;
+  color: #333333;
 }
 
 section {
@@ -58,11 +59,83 @@ header nav {
 #divTitle #presentation h1 {
   margin-top: 0;
   font-size: 3em;
-  background: linear-gradient(to right, white, rgb(16, 233, 86), darkgreen, rgb(16, 233, 86), white);
+  background: linear-gradient(to right, rgb(16, 233, 86), darkgreen, rgb(16, 233, 86));
   -webkit-background1-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
+}
+
+#about {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+#about #description {
+  width: 100%;
+  border: solid;
+}
+#about #lol,
+#about #spotify {
+  width: 45%;
+  border: solid;
+}
+
+form {
+  padding: 5% 2%;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #333333;
+}
+form .identite,
+form .coordonnees {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+form .error {
+  text-align: center;
+  width: 100%;
+  max-width: 300px;
+  font-size: 13px;
+  color: red;
+  background-color: transparent;
+  margin-bottom: 5px;
+}
+form button {
+  background-color: #7791ff;
+  color: #fff;
+  border: 2px solid #7791ff;
+  border-radius: 10px;
+  padding: 10px 20px;
+}
+form button:hover {
+  color: #7791ff;
+  background-color: #333333;
+  transition: color 0.5s, background-color 0.5s;
+  transform: scale(1.2);
+}
+form button:active {
+  color: #7791ff;
+  background-color: #333333;
+  transform: scale(0.9);
+}
+form textarea,
+form input[type=text],
+form input[type=email],
+form input[type=tel] {
+  opacity: 0.7;
+  padding: 5px;
+  margin: 5px 0;
+  border: 2px solid #7791ff;
+  border-radius: 10px;
+  width: 100%;
+  max-width: 300px;
 }
 
 @media screen and (max-width: 1100px) {
