--- a/styles.scss
+++ b/styles.scss
@@ -11,7 +11,7 @@
 }
 
 $color1: #333333;
-
+$color2: rgb(16, 233, 86);
 
 //
 html {
@@ -23,6 +23,7 @@ body {
     margin-top: 100px;
     font-size: 1.5em;
     text-align: center;
+    color: $color1;
 }
 
 section {
@@ -80,7 +81,7 @@ header {
             margin-top: 0;
             font-size: 3em;
             background: linear-gradient(to right,
-                    white, rgb(16, 233, 86), darkgreen, rgb(16, 233, 86), white);
+                    $color2, darkgreen, $color2);
             -webkit-background1-clip: text;
             -webkit-text-fill-color: transparent;
             -webkit-background-clip: text;
@@ -89,6 +90,92 @@ header {
         }
     }
 }
+
+#about {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+
+    #description {
+        width: 100%;
+        border: solid;
+    }
+
+    #lol,
+    #spotify {
+        width: 45%;
+
+        border: solid;
+    }
+}
+
+form {
+    padding: 5% 2%;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #333333;
+
+
+    .identite,
+    .coordonnees {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+    }
+
+    .error {
+        text-align: center;
+        width: 100%;
+        max-width: 300px;
+        font-size: 13px;
+        color: red;
+        background-color: transparent;
+        margin-bottom: 5px;
+    }
+
+    button {
+        background-color: #7791ff;
+        color: #fff;
+        border: 2px solid #7791ff;
+        border-radius: 10px;
+        padding: 10px 20px;
+
+        &:hover {
+            color: #7791ff;
+            background-color: #333333;
+            transition: color 0.5s, background-color 0.5s;
+            transform: scale(1.2);
+        }
+
+        &:active {
+            color: #7791ff;
+            background-color: #333333;
+            transform: scale(0.9);
+        }
+
+    }
+
+    textarea,
+    input[type="text"],
+    input[type="email"],
+    input[type="tel"] {
+        opacity: 0.7;
+        padding: 5px;
+        margin: 5px 0;
+        border: 2px solid #7791ff;
+        border-radius: 10px;
+        width: 100%;
+        max-width: 300px;
+    }
+
+}
+
 
 
 @media screen and (max-width: 1100px) {
