--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 html {
-  background: linear-gradient(to top, darkgreen, rgb(16, 233, 86), black, rgb(16, 233, 86), darkgreen);
+  background: linear-gradient(to bottom, darkgreen, rgb(16, 233, 86), black, rgb(16, 233, 86), darkgreen);
 }
 
 body {
@@ -81,58 +81,58 @@ header nav {
   border: solid;
 }
 
-form {
-  padding: 5% 2%;
-  background-color: #ffffff;
+#contact {
+  border: solid #333333 2px;
+  border-radius: 50px;
+}
+#contact form {
+  padding: 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
   color: #333333;
 }
-form .identite,
-form .coordonnees {
+#contact form .identite,
+#contact form .coordonnees {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   width: 50%;
 }
-form .error {
+#contact form .error {
   text-align: center;
   width: 100%;
   max-width: 300px;
-  font-size: 13px;
+  font-size: 0.65em;
   color: red;
-  background-color: transparent;
+  background-color: #333333;
+  width: auto;
+  padding: 0 5px;
+  border: solid red 2px;
   margin-bottom: 5px;
 }
-form button {
-  background-color: #7791ff;
-  color: #fff;
-  border: 2px solid #7791ff;
+#contact form button {
+  background-color: #333333;
+  color: rgb(16, 233, 86);
+  border: 2px solid #333333;
   border-radius: 10px;
   padding: 10px 20px;
 }
-form button:hover {
-  color: #7791ff;
-  background-color: #333333;
+#contact form button:hover {
+  color: #333333;
+  background-color: rgb(16, 233, 86);
   transition: color 0.5s, background-color 0.5s;
   transform: scale(1.2);
 }
-form button:active {
-  color: #7791ff;
-  background-color: #333333;
+#contact form button:active {
   transform: scale(0.9);
 }
-form textarea,
-form input[type=text],
-form input[type=email],
-form input[type=tel] {
+#contact form textarea,
+#contact form input {
   opacity: 0.7;
   padding: 5px;
   margin: 5px 0;
-  border: 2px solid #7791ff;
+  border: 2px solid #333333;
   border-radius: 10px;
   width: 100%;
   max-width: 300px;
