--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,8 @@ html {
 }
 
 body {
-  margin-top: 100px;
+  margin: 100px 0 0 0;
   font-size: 1.5em;
-  text-align: center;
   color: #333333;
 }
 
@@ -40,7 +39,6 @@ header nav {
   height: 100%;
   display: flex;
   justify-content: space-around;
-  align-items: center;
 }
 
 #divTitle {
@@ -84,6 +82,7 @@ header nav {
 #contact {
   border: solid #333333 2px;
   border-radius: 50px;
+  padding: 25px;
 }
 #contact form {
   padding: 2%;
@@ -138,7 +137,18 @@ header nav {
   max-width: 300px;
 }
 
-@media screen and (max-width: 1100px) {
+#projets #portfolio {
+  border: solid black 2px;
+  height: 100px;
+  margin: 100px 0;
+}
+
+footer {
+  width: 100%;
+  background: linear-gradient(to bottom, rgb(16, 233, 86), darkgreen);
+}
+
+@media screen and (max-width: 800px) {
   * {
     font-size: 80%;
   }
@@ -147,7 +157,9 @@ header nav {
   }
   header nav {
     flex-direction: column;
+    text-align: end;
     list-style-image: url(src/fleche.png);
+    padding-right: 20px;
   }
   #divTitle #presentation {
     border-radius: 50px;
@@ -158,9 +170,10 @@ header nav {
     margin-top: 150px;
   }
 }
-@media screen and (min-width: 1101px) {
+@media screen and (min-width: 801px) {
   nav {
     list-style: none;
+    align-items: center;
   }
 }
 
