--- a/styles.scss
+++ b/styles.scss
@@ -20,9 +20,8 @@ html {
 }
 
 body {
-    margin-top: 100px;
+    margin: 100px 0 0 0;
     font-size: 1.5em;
-    text-align: center;
     color: $color1;
 }
 
@@ -55,7 +54,6 @@ header {
         height: 100%;
         display: flex;
         justify-content: space-around;
-        align-items: center;
 
 
 
@@ -113,6 +111,7 @@ header {
 #contact {
     border: solid $color1 2px;
     border-radius: 50px;
+    padding: 25px;
 
     form {
         padding: 2%;
@@ -180,9 +179,23 @@ header {
 
 }
 
+#projets {
+    #portfolio {
+        border: solid black 2px;
+        height: 100px;
+        margin: 100px 0;
+    }
+}
 
+footer {
 
-@media screen and (max-width: 1100px) {
+    width: 100%;
+    background: linear-gradient(to bottom,
+            rgb(16, 233, 86), darkgreen);
+    ;
+}
+
+@media screen and (max-width: 800px) {
     * {
         font-size: 80%;
     }
@@ -194,7 +207,9 @@ header {
 
         nav {
             flex-direction: column;
+            text-align: end;
             list-style-image: url(src/fleche.png);
+            padding-right: 20px;
         }
     }
 
@@ -213,8 +228,10 @@ header {
 }
 
 
-@media screen and (min-width: 1101px) {
+@media screen and (min-width: 801px) {
     nav {
         list-style: none;
+        align-items: center;
+
     }
 }
