--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   margin: 100px 0 0 0;
   font-size: 1.5em;
   color: #333333;
+  text-align: center;
 }
 
 section {
@@ -28,7 +29,7 @@ header {
   left: 0;
   right: 0;
   height: 100px;
-  z-index: 100;
+  z-index: 5;
 }
 header img {
   height: 75%;
@@ -52,16 +53,15 @@ header nav {
 }
 #divTitle #presentation {
   position: absolute;
-  color: rgb(16, 233, 86);
-}
-#divTitle #presentation h1 {
-  margin-top: 0;
-  font-size: 3em;
-  background: linear-gradient(to right, rgb(16, 233, 86), darkgreen, rgb(16, 233, 86));
+  background: linear-gradient(to right, white, rgb(16, 233, 86), white, rgb(16, 233, 86), white);
   -webkit-background1-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
+}
+#divTitle #presentation h1 {
+  margin: 0;
+  font-size: 3em;
 }
 
 #about {
@@ -99,7 +99,6 @@ header nav {
   width: 50%;
 }
 #contact form .error {
-  text-align: center;
   width: 100%;
   max-width: 300px;
   font-size: 0.65em;
