--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  margin: 100px 0 0 0;
+  margin-top: 100px;
   font-size: 1.5em;
   color: #333333;
   text-align: center;
@@ -33,13 +33,14 @@ header {
 }
 header img {
   height: 75%;
-  margin-left: 2%;
+  padding-left: 2%;
 }
 header nav {
   width: 50%;
   height: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding-right: 2%;
 }
 
 #divTitle {
@@ -60,7 +61,7 @@ header nav {
   background-clip: text;
 }
 #divTitle #presentation h1 {
-  margin: 0;
+  margin-top: 0;
   font-size: 3em;
 }
 
@@ -143,22 +144,23 @@ header nav {
 }
 
 footer {
+  margin-top: 10px;
+  padding: 5px;
   width: 100%;
-  background: linear-gradient(to bottom, rgb(16, 233, 86), darkgreen);
+  background-color: rgb(16, 233, 86);
+}
+footer p {
+  margin: 0;
 }
 
 @media screen and (max-width: 800px) {
   * {
     font-size: 80%;
   }
-  header {
-    height: 150px;
-  }
   header nav {
     flex-direction: column;
     text-align: end;
     list-style-image: url(src/fleche.png);
-    padding-right: 20px;
   }
   #divTitle #presentation {
     border-radius: 50px;
