--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  margin-top: 100px;
+  margin: 100px 0 0 0;
   font-size: 1.5em;
   color: #333333;
   text-align: center;
@@ -30,6 +30,8 @@ header {
   right: 0;
   height: 100px;
   z-index: 5;
+  margin: 0;
+  padding: 0;
 }
 header img {
   height: 75%;
@@ -80,17 +82,15 @@ header nav {
   border: solid;
 }
 
-#contact {
-  border: solid #333333 2px;
-  border-radius: 50px;
-  padding: 25px;
-}
 #contact form {
   padding: 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
   color: #333333;
+  border: solid #333333 2px;
+  border-radius: 50px;
+  padding: 25px;
 }
 #contact form .identite,
 #contact form .coordonnees {
@@ -140,7 +140,7 @@ header nav {
 #projets #portfolio {
   border: solid black 2px;
   height: 100px;
-  margin: 100px 0;
+  margin: 50px 0;
 }
 
 footer {
@@ -161,14 +161,6 @@ footer p {
     flex-direction: column;
     text-align: end;
     list-style-image: url(src/fleche.png);
-  }
-  #divTitle #presentation {
-    border-radius: 50px;
-    padding: 2% 5%;
-    background-color: rgba(25, 25, 25, 0.25);
-  }
-  body {
-    margin-top: 150px;
   }
 }
 @media screen and (min-width: 801px) {
