--- a/styles.scss
+++ b/styles.scss
@@ -21,7 +21,7 @@ html {
 
 
 body {
-    margin-top: 100px;
+    margin: 100px 0 0 0;
     font-size: 1.5em;
     color: $color1;
     text-align: center;
@@ -38,13 +38,15 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(16, 233, 86);
+    background-color: $color2;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     height: 100px;
     z-index: 5;
+    margin: 0;
+    padding: 0;
 
     img {
         height: 75%;
@@ -112,9 +114,6 @@ header {
 }
 
 #contact {
-    border: solid $color1 2px;
-    border-radius: 50px;
-    padding: 25px;
 
     form {
         padding: 2%;
@@ -122,8 +121,9 @@ header {
         flex-direction: column;
         align-items: center;
         color: $color1;
-
-
+        border: solid $color1 2px;
+        border-radius: 50px;
+        padding: 25px;
 
         .identite,
         .coordonnees {
@@ -185,7 +185,7 @@ header {
     #portfolio {
         border: solid black 2px;
         height: 100px;
-        margin: 100px 0;
+        margin: 50px 0;
     }
 }
 
@@ -205,8 +205,6 @@ footer {
         font-size: 80%;
     }
 
-
-
     header {
 
         nav {
@@ -215,21 +213,7 @@ footer {
             list-style-image: url(src/fleche.png);
         }
     }
-
-    #divTitle {
-        #presentation {
-
-            border-radius: 50px;
-            padding: 2% 5%;
-            background-color: rgba(25, 25, 25, 0.25);
-        }
-    }
-
-    body {
-        margin-top: 150px;
-    }
 }
-
 
 @media screen and (min-width: 801px) {
     nav {
