--- a/styles.scss
+++ b/styles.scss
@@ -29,10 +29,19 @@ body {
 
 section {
     width: 80%;
-    margin: auto;
+    margin: 3em auto;
+
+    h2 {
+        margin: 1em auto;
+    }
 }
 
-
+hr {
+    width: 70%;
+    margin: 0 auto;
+    border-color: $color1;
+    border-width: 1px 0 0 0;
+}
 
 header {
     display: flex;
@@ -58,12 +67,12 @@ header {
         height: 100%;
         display: flex;
         justify-content: space-between;
-
         padding-right: 2%;
 
-
-
-
+        a {
+            text-decoration: none;
+            color: $color1;
+        }
     }
 }
 
@@ -181,7 +190,7 @@ header {
 
 }
 
-#projets {
+#projects {
     #portfolio {
         border: solid black 2px;
         height: 100px;
