--- a/styles.scss
+++ b/styles.scss
@@ -15,16 +15,28 @@ $color2: rgb(16, 233, 86);
 
 //
 html {
-    background: linear-gradient(to bottom,
-            darkgreen, rgb(16, 233, 86), black, rgb(16, 233, 86), darkgreen);
+    background-color: $color1;
 }
 
 
 body {
     margin: 100px 0 0 0;
     font-size: 1.5em;
-    color: $color1;
     text-align: center;
+}
+
+main {
+    margin: 0;
+    padding: 0;
+
+    background: linear-gradient(to bottom,
+            $color2, darkgreen, $color2, white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+
+
 }
 
 section {
@@ -33,6 +45,7 @@ section {
 
     h2 {
         margin: 1em auto;
+        color: $color2;
     }
 }
 
@@ -122,6 +135,14 @@ header {
     }
 }
 
+#projects {
+    #portfolio {
+        border: solid black 2px;
+        height: 100px;
+        margin: 50px 0;
+    }
+}
+
 #contact {
 
     form {
@@ -130,7 +151,7 @@ header {
         flex-direction: column;
         align-items: center;
         color: $color1;
-        border: solid $color1 2px;
+        border: solid $color2 2px;
         border-radius: 50px;
         padding: 25px;
 
@@ -188,14 +209,6 @@ header {
 
     }
 
-}
-
-#projects {
-    #portfolio {
-        border: solid black 2px;
-        height: 100px;
-        margin: 50px 0;
-    }
 }
 
 footer {
