--- a/styles.scss
+++ b/styles.scss
@@ -85,6 +85,10 @@ header {
         a {
             text-decoration: none;
             color: $color1;
+
+            &:hover {
+                color: white;
+            }
         }
     }
 }
