--- a/styles.css
+++ b/styles.css
@@ -110,9 +110,32 @@ header nav a:hover {
 }
 
 #projects #portfolio {
-  border: solid black 2px;
-  height: 100px;
-  margin: 50px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+#projects #portfolio div {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: dotted rgb(16, 233, 86) 1px;
+  margin: 20px 0;
+}
+#projects #portfolio div p {
+  width: 50%;
+}
+#projects #portfolio div img {
+  max-width: 50%;
+  height: 200px;
+}
+#projects #portfolio div:hover img {
+  transition: transform 0.2s;
+  transform: scale(1.2);
+}
+#projects #portfolio div:active {
+  transition: transform 0s;
+  transform: scale(0.9);
 }
 
 #contact form {
