--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,14 @@
   font-family: "Pacifico", cursive;
 }
 
+@keyframes colorScroll {
+  0% {
+    background-position: left bottom;
+  }
+  100% {
+    background-position: right bottom;
+  }
+}
 html {
   background-color: #333333;
 }
@@ -64,12 +72,22 @@ header nav {
   justify-content: space-between;
   padding-right: 2%;
 }
+header nav li {
+  height: 100%;
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 header nav a {
   text-decoration: none;
   color: #333333;
+  display: inline-block;
+  transition: transform 0.2s;
 }
-header nav a:hover {
+header nav li:hover a {
   color: white;
+  transform: scale(1.2);
 }
 
 #divTitle {
@@ -83,15 +101,24 @@ header nav a:hover {
 }
 #divTitle #presentation {
   position: absolute;
-  background: linear-gradient(to right, white, rgb(16, 233, 86), white, rgb(16, 233, 86), white);
-  -webkit-background1-clip: text;
+  background: linear-gradient(to right, rgb(16, 233, 86), white, rgb(16, 233, 86), white, rgb(16, 233, 86));
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
 }
 #divTitle #presentation h1 {
+  background: linear-gradient(to right, rgb(16, 233, 86), white, rgb(16, 233, 86), white, rgb(16, 233, 86));
+  background-size: 200% 100%;
+  animation: colorScroll 3s linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
   margin-top: 0;
   font-size: 3em;
+  display: inline-block;
+  position: relative;
 }
 
 #about {
@@ -107,6 +134,32 @@ header nav a:hover {
 #about #spotify {
   width: 45%;
   border: solid;
+}
+
+#tools {
+  display: flex;
+  flex-wrap: wrap;
+}
+#tools h2 {
+  width: 100%;
+}
+#tools #competencesDiv {
+  width: 70%;
+}
+#tools #cvDiv {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#tools #cvDiv img {
+  width: 50%;
+}
+#tools #cvDiv a {
+  color: rgb(16, 233, 86);
+}
+#tools #cvDiv a:hover {
+  box-shadow: 0 0 10px rgb(16, 233, 86);
 }
 
 #projects #portfolio {
