--- a/styles.scss
+++ b/styles.scss
@@ -10,14 +10,22 @@
     align-items: center;
 }
 
+@keyframes colorScroll {
+    0% {
+        background-position: left bottom;
+    }
+
+    100% {
+        background-position: right bottom;
+    }
+}
+
 $color1: #333333;
 $color2: rgb(16, 233, 86);
 
-//
 html {
     background-color: $color1;
 }
-
 
 body {
     margin: 100px 0 0 0;
@@ -82,12 +90,25 @@ header {
         justify-content: space-between;
         padding-right: 2%;
 
+        li {
+            height: 100%;
+            width: 20%;
+            @include flexCenter
+        }
+
         a {
             text-decoration: none;
             color: $color1;
+            display: inline-block;
+            transition: transform 0.2s;
 
-            &:hover {
+
+        }
+
+        li:hover {
+            a {
                 color: white;
+                transform: scale(1.2);
             }
         }
     }
@@ -107,16 +128,24 @@ header {
     #presentation {
         position: absolute;
 
-        background: linear-gradient(to right,
-                white, $color2, white, $color2, white);
-        -webkit-background1-clip: text;
+        background: linear-gradient(to right, $color2, white, $color2, white, $color2);
+        -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         -webkit-background-clip: text;
         background-clip: text;
 
         h1 {
+            background: linear-gradient(to right, $color2, white, $color2, white, $color2);
+            background-size: 200% 100%;
+            animation: colorScroll 3s linear infinite;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            -webkit-background-clip: text;
+            background-clip: text;
             margin-top: 0;
             font-size: 3em;
+            display: inline-block;
+            position: relative;
         }
     }
 }
@@ -136,6 +165,38 @@ header {
     #spotify {
         width: 45%;
         border: solid;
+    }
+}
+
+#tools {
+    display: flex;
+    flex-wrap: wrap;
+
+    h2 {
+        width: 100%;
+    }
+
+    #competencesDiv {
+        width: 70%;
+    }
+
+    #cvDiv {
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        img {
+            width: 50%;
+        }
+
+        a {
+            color: $color2;
+
+            &:hover {
+                box-shadow: 0 0 10px $color2;
+            }
+        }
     }
 }
 
