--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-  margin: 100px 0 0 0;
+  margin: 75px 0 0 0;
   font-size: 1.5em;
   text-align: center;
 }
@@ -56,7 +56,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  height: 100px;
+  height: 50px;
   z-index: 5;
   margin: 0;
   padding: 0;
@@ -82,7 +82,6 @@ header nav li {
 header nav a {
   text-decoration: none;
   color: #333333;
-  display: inline-block;
   transition: transform 0.2s;
 }
 header nav li:hover a {
@@ -262,13 +261,16 @@ footer p {
   header nav {
     flex-direction: column;
     text-align: end;
-    list-style-image: url(src/fleche.png);
+    list-style-image: url(src/fleche.png) 50px;
   }
 }
 @media screen and (min-width: 801px) {
   nav {
     list-style: none;
     align-items: center;
+  }
+  nav a {
+    display: inline-block;
   }
 }
 
