--- a/styles.scss
+++ b/styles.scss
@@ -28,7 +28,7 @@ html {
 }
 
 body {
-    margin: 100px 0 0 0;
+    margin: 75px 0 0 0;
     font-size: 1.5em;
     text-align: center;
 }
@@ -73,7 +73,7 @@ header {
     top: 0;
     left: 0;
     right: 0;
-    height: 100px;
+    height: 50px;
     z-index: 5;
     margin: 0;
     padding: 0;
@@ -99,7 +99,6 @@ header {
         a {
             text-decoration: none;
             color: $color1;
-            display: inline-block;
             transition: transform 0.2s;
 
 
@@ -327,7 +326,7 @@ footer {
         nav {
             flex-direction: column;
             text-align: end;
-            list-style-image: url(src/fleche.png);
+            list-style-image: url(src/fleche.png) 50px;
         }
     }
 }
@@ -336,6 +335,11 @@ footer {
     nav {
         list-style: none;
         align-items: center;
+
+        a {
+            display: inline-block;
+
+        }
 
     }
 }
