--- a/styles.scss
+++ b/styles.scss
@@ -205,15 +205,15 @@ header {
                 display: flex;
                 justify-content: start;
                 width: 50%;
-                height: 10px;
+                height: 12px;
                 background-color: rgb(125, 125, 125);
-                border-radius: 5px;
+                border-radius: 6px;
             }
 
             .progressBar {
                 background-color: #4CAF50;
-                border-radius: 5px;
-                height: 10px;
+                border-radius: 6px;
+                height: 100%;
             }
         }
     }
@@ -249,6 +249,7 @@ header {
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: center;
             border: dotted $color2 1px;
             margin: 20px 0;
 
@@ -259,7 +260,7 @@ header {
 
             img {
                 max-width: 50%;
-                height: 200px;
+                max-height: 200px;
             }
 
             &:hover {
