--- a/styles.scss
+++ b/styles.scss
@@ -153,6 +153,7 @@ header {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    text-align: justify;
 
 
     #description {
