--- a/styles.css
+++ b/styles.css
@@ -123,12 +123,20 @@ header nav li:hover a {
 #about {
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
-  text-align: justify;
+  text-align: left;
 }
 #about #description {
-  width: 100%;
+  width: 70%;
   border: solid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#about #descDivs {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 #about #lol,
 #about #spotify {
