--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,6 @@
 * {
     cursor: url(src/cursor.png) 6 1, pointer;
     font-family: 'Pacifico', cursive;
-
 }
 
 @mixin flexCenter {
@@ -152,13 +151,22 @@ header {
 #about {
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
-    text-align: justify;
+    text-align: left;
 
 
     #description {
-        width: 100%;
+        width: 70%;
         border: solid;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #descDivs {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
     }
 
     #lol,
