--- a/styles.scss
+++ b/styles.scss
@@ -22,28 +22,12 @@
 $color1: #333333;
 $color2: rgb(16, 233, 86);
 
-html {
-    background-color: $color1;
-}
 
 body {
     margin: 75px 0 0 0;
     font-size: 1.5em;
     text-align: center;
-}
-
-main {
-    margin: 0;
-    padding: 0;
-
-    background: linear-gradient(to bottom,
-            $color2, darkgreen, $color2, white);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
-
-
+    background-color: $color1;
 }
 
 section {
@@ -126,7 +110,7 @@ header {
     #presentation {
         position: absolute;
 
-        background: linear-gradient(to right, $color2, white, $color2, white, $color2);
+        background: linear-gradient(to right, white, $color2, white, $color2, white);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         -webkit-background-clip: text;
@@ -148,211 +132,173 @@ header {
     }
 }
 
-#about {
-    display: flex;
-    justify-content: space-around;
-    text-align: left;
+main {
+    margin: 0;
+    padding: 0;
 
+    background: linear-gradient(to bottom,
+            $color2, white, $color2, white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
 
-    #description {
-        width: 70%;
-        border: solid;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    #descDivs {
-        width: 100%;
+    #about {
         display: flex;
         justify-content: space-around;
-        flex-wrap: wrap;
-    }
+        text-align: left;
 
-    #lol,
-    #spotify {
-        width: 45%;
-        border: solid;
-    }
-}
 
-#tools {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-
-    h2 {
-        width: 100%;
-    }
-
-    #competencesDiv {
-        width: 70%;
-
-        div {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 40px;
-            margin: 4px 0;
-
-            p {
-                display: none;
-            }
-
-            h4 {
-                width: 25%;
-                margin: 0;
-
-            }
-
-            img {
-                max-width: 25%;
-                height: 100%;
-            }
-
-            .progressBarFix {
-                display: flex;
-                justify-content: start;
-                width: 50%;
-                height: 12px;
-                background-color: rgb(125, 125, 125);
-                border-radius: 6px;
-            }
-
-            .progressBar {
-                background-color: #4CAF50;
-                border-radius: 6px;
-                height: 100%;
-            }
-        }
-    }
-
-    #cvDiv {
-        width: 30%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        img {
-            width: 50%;
-        }
-
-        a {
-            color: $color2;
-
-            &:hover {
-                box-shadow: 0 0 10px $color2;
-            }
-        }
-    }
-}
-
-#projects {
-    #portfolio {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-
-        div {
-            width: 45%;
+        #description {
+            width: 70%;
+            border: solid;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            border: dotted $color2 1px;
-            margin: 20px 0;
+        }
 
-            p {
+        #descDivs {
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+
+        #lol,
+        #spotify {
+            width: 45%;
+            border: solid;
+        }
+    }
+
+    #tools {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+
+        h2 {
+            width: 100%;
+        }
+
+        #competencesDiv {
+            width: 70%;
+
+            div {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                height: 40px;
+                margin: 4px 0;
+
+                p {
+                    display: none;
+                }
+
+                h4 {
+                    width: 25%;
+                    margin: 0;
+
+                }
+
+                img {
+                    max-width: 25%;
+                    height: 100%;
+                }
+
+                .progressBarFix {
+                    display: flex;
+                    justify-content: start;
+                    width: 50%;
+                    height: 12px;
+                    background-color: rgb(125, 125, 125);
+                    border-radius: 6px;
+                }
+
+                .progressBar {
+                    background-color: #4CAF50;
+                    border-radius: 6px;
+                    height: 100%;
+                }
+            }
+        }
+
+        #cvDiv {
+            width: 30%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            img {
                 width: 50%;
             }
 
+            a {
+                color: $color2;
 
-            img {
-                max-width: 50%;
-                max-height: 200px;
+                &:hover {
+                    box-shadow: 0 0 10px $color2;
+                }
             }
+        }
+    }
 
-            &:hover {
+    #projects {
+        #portfolio {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+
+            div {
+                width: 45%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                border: dotted $color2 1px;
+                margin: 20px 0;
+
+                p {
+                    width: 50%;
+                }
+
+
                 img {
-                    transition: transform 0.2s;
-                    transform: scale(1.2);
+                    max-width: 50%;
+                    max-height: 200px;
+                }
+
+                &:hover {
+                    img {
+                        transition: transform 0.2s;
+                        transform: scale(1.2);
+                    }
+                }
+
+                &:active {
+                    transition: transform 0s;
+                    transform: scale(0.9);
                 }
             }
 
-            &:active {
-                transition: transform 0s;
-                transform: scale(0.9);
-            }
         }
-
-    }
-}
-
-#contact {
-
-    form {
-        padding: 2%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        color: $color1;
-        border: solid $color2 2px;
-        border-radius: 50px;
-        padding: 25px;
-
-        .identite,
-        .coordonnees {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 50%;
-        }
-
-        .error {
-            width: 100%;
-            max-width: 300px;
-            font-size: 0.65em;
-            color: red;
-            background-color: $color1;
-            width: auto;
-            padding: 0 5px;
-            border: solid red 2px;
-            margin-bottom: 5px;
-        }
-
-        button {
-            background-color: $color1;
-            color: $color2;
-            border: 2px solid $color1;
-            border-radius: 10px;
-            padding: 10px 20px;
-
-            &:hover {
-                color: $color1;
-                background-color: $color2;
-                transition: color 0.5s, background-color 0.5s;
-                transform: scale(1.2);
-            }
-
-            &:active {
-                transform: scale(0.9);
-            }
-
-        }
-
-        textarea,
-        input {
-            opacity: 0.7;
-            padding: 5px;
-            margin: 5px 0;
-            border: 2px solid $color1;
-            border-radius: 10px;
-            width: 100%;
-            max-width: 300px;
-        }
-
     }
 
+    #contact {
+        #socials {
+            img {
+                width: 80px;
+                border-radius: 50%;
+                transition: transform 0.3s, background-color 0.3s;
+                margin: 0 10px;
+
+                &:hover {
+
+                    background-color: $color2;
+                    transform: scale(1.2);
+                }
+            }
+        }
+    }
 }
 
 footer {
