--- a/styles.scss
+++ b/styles.scss
@@ -148,10 +148,8 @@ main {
         justify-content: space-around;
         text-align: left;
 
-
         #description {
             width: 70%;
-            border: solid;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -162,13 +160,16 @@ main {
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
+
+            #lol,
+            #spotify {
+                width: 45%;
+                border: solid;
+                display: none;
+            }
         }
 
-        #lol,
-        #spotify {
-            width: 45%;
-            border: solid;
-        }
+
     }
 
     #tools {
