--- a/styles.scss
+++ b/styles.scss
@@ -87,7 +87,7 @@ header {
 
         }
 
-        li:hover {
+        div:hover {
             a {
                 color: white;
                 transform: scale(1.2);
