--- a/styles.scss
+++ b/styles.scss
@@ -154,8 +154,10 @@ main {
             flex-direction: column;
             align-items: center;
 
-            h4 {
-                margin: 20px;
+            .subtitle {
+                margin: 40px 0 20px 0;
+                font-size: 1.2em;
+                font-weight: 800;
             }
 
             p {
