--- a/styles.css
+++ b/styles.css
@@ -211,10 +211,11 @@ main #tools #cvDiv a:hover {
 main #projects #portfolio {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 5%;
 }
 main #projects #portfolio div {
-  width: 45%;
+  width: 48%;
   display: flex;
   flex-direction: column;
   align-items: center;
