--- a/styles.css
+++ b/styles.css
@@ -214,29 +214,39 @@ main #projects #portfolio {
   justify-content: space-between;
   padding: 0 5%;
 }
-main #projects #portfolio div {
+main #projects #portfolio .project {
   width: 48%;
+  display: flex;
+  border: dotted rgb(16, 233, 86) 1px;
+  margin: 20px 0;
+}
+main #projects #portfolio .project .projectMain {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: dotted rgb(16, 233, 86) 1px;
-  margin: 20px 0;
+  border: solid;
+  width: 70%;
 }
-main #projects #portfolio div p {
+main #projects #portfolio .project .projectMain p {
   width: 50%;
 }
-main #projects #portfolio div img {
+main #projects #portfolio .project .projectMain img {
   max-width: 50%;
   max-height: 200px;
 }
-main #projects #portfolio div:hover img {
+main #projects #portfolio .project .projectMain:hover img {
   transition: transform 0.2s;
   transform: scale(1.2);
 }
-main #projects #portfolio div:active {
+main #projects #portfolio .project .projectMain:active {
   transition: transform 0s;
   transform: scale(0.9);
+}
+main #projects #portfolio .project .projectTools {
+  width: 25%;
+  border: solid;
+  color: blue;
 }
 main #contact #socials img {
   width: 80px;
