--- a/styles.scss
+++ b/styles.scss
@@ -271,6 +271,7 @@ main {
             .project {
                 width: 48%;
                 display: flex;
+                justify-content: space-between;
                 border: dotted $color2 1px;
                 margin: 20px 0;
 
@@ -279,13 +280,11 @@ main {
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
-                    border: solid;
                     width: 70%;
 
                     p {
                         width: 50%;
                     }
-
 
                     img {
                         max-width: 50%;
@@ -307,11 +306,17 @@ main {
 
                 .projectTools {
                     width: 25%;
-                    border: solid;
-                    color: blue;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    align-items: center;
+                    border-left: dashed $color2 1px;
+
+                    img {
+                        width: 25%;
+                    }
                 }
             }
-
         }
     }
 
