--- a/styles.scss
+++ b/styles.scss
@@ -275,6 +275,22 @@ main {
                 border: dotted $color2 1px;
                 margin: 20px 0;
 
+                &:nth-child(2n) {
+                    flex-direction: row;
+
+                    .projectMain {
+                        border-right: dashed $color2 1px;
+                    }
+                }
+
+                &:nth-child(2n+1) {
+                    flex-direction: row-reverse;
+
+                    .projectMain {
+                        border-left: dashed $color2 1px;
+                    }
+                }
+
                 .projectMain {
                     display: flex;
                     flex-direction: column;
@@ -310,7 +326,6 @@ main {
                     flex-direction: column;
                     justify-content: space-around;
                     align-items: center;
-                    border-left: dashed $color2 1px;
 
                     img {
                         width: 25%;
