--- a/styles.scss
+++ b/styles.scss
@@ -266,7 +266,7 @@ main {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            padding: 0 5%;
+            padding: 0;
 
             .project {
                 width: 48%;
