--- a/styles.scss
+++ b/styles.scss
@@ -307,18 +307,6 @@ main {
                         max-width: 50%;
                         max-height: 200px;
                     }
-
-                    &:hover {
-                        img {
-                            transition: transform 0.2s;
-                            transform: scale(1.2);
-                        }
-                    }
-
-                    &:active {
-                        transition: transform 0s;
-                        transform: scale(0.9);
-                    }
                 }
 
                 .projectTools {
@@ -331,6 +319,18 @@ main {
                     img {
                         width: 25%;
                     }
+                }
+
+                &:hover {
+                    .projectMain img {
+                        transition: transform 0.2s;
+                        transform: scale(1.2);
+                    }
+                }
+
+                &:active {
+                    transition: transform 0s;
+                    transform: scale(0.9);
                 }
             }
         }
