--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,5 @@
 * {
     cursor: url(src/cursor.png) 6 1, pointer;
-    font-family: 'Pacifico', cursive;
 }
 
 @mixin flexCenter {
@@ -22,6 +21,12 @@
 $color1: #333333;
 $color2: rgb(16, 233, 86);
 
+hr {
+    width: 70%;
+    margin: 0 auto;
+    border-color: $color1;
+    border-width: 1px 0 0 0;
+}
 
 body {
     margin: 75px 0 0 0;
@@ -40,12 +45,6 @@ section {
     }
 }
 
-hr {
-    width: 70%;
-    margin: 0 auto;
-    border-color: $color1;
-    border-width: 1px 0 0 0;
-}
 
 header {
     display: flex;
@@ -113,7 +112,6 @@ header {
         background: linear-gradient(to right, white, $color2, white, $color2, white);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        -webkit-background-clip: text;
         background-clip: text;
 
         h1 {
@@ -122,12 +120,10 @@ header {
             animation: colorScroll 2.5s linear infinite;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            -webkit-background-clip: text;
             background-clip: text;
             margin-top: 0;
             font-size: 3em;
-            display: inline-block;
-            position: relative;
+            font-family: 'Pacifico', cursive;
         }
     }
 }
@@ -149,7 +145,6 @@ main {
 
 
         #description {
-            width: 60%;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -190,6 +185,7 @@ main {
         flex-wrap: wrap;
         align-items: center;
 
+
         h2 {
             width: 100%;
         }
@@ -200,7 +196,6 @@ main {
         }
 
         #competencesDiv {
-            width: 70%;
 
             div {
                 display: flex;
@@ -242,7 +237,6 @@ main {
         }
 
         #cvDiv {
-            width: 30%;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -262,6 +256,7 @@ main {
     }
 
     #projects {
+
         #portfolio {
             display: flex;
             flex-wrap: wrap;
@@ -379,8 +374,27 @@ footer {
     #about {
         justify-content: center;
 
-        #imgMe {
+        img {
             display: none;
+        }
+
+        #description {
+            width: 100%;
+        }
+    }
+
+    #tools {
+
+        flex-direction: column;
+        justify-content: center;
+
+        #competencesDiv {
+            width: 100%;
+        }
+
+        #cvDiv {
+            margin-top: 50px;
+            width: 50%;
         }
     }
 }
@@ -396,5 +410,20 @@ footer {
 
     #about {
         justify-content: space-between;
+
+        #description {
+
+            width: 60%;
+        }
+    }
+
+    #tools {
+        #competencesDiv {
+            width: 70%;
+        }
+
+        #cvDiv {
+            width: 30%;
+        }
     }
 }
