--- a/styles.scss
+++ b/styles.scss
@@ -264,35 +264,15 @@ main {
             padding: 0;
 
             .project {
-                width: 48%;
                 display: flex;
                 justify-content: space-between;
                 border: dotted $color2 1px;
                 margin: 20px 0;
 
-                &:nth-child(2n) {
-                    flex-direction: row;
-
-                    .projectMain {
-                        border-right: dashed $color2 1px;
-                    }
-                }
-
-                &:nth-child(2n+1) {
-                    flex-direction: row-reverse;
-
-                    .projectMain {
-                        border-left: dashed $color2 1px;
-                    }
-
-                }
-
                 .projectMain {
                     display: flex;
-                    flex-direction: column;
                     align-items: center;
                     justify-content: center;
-                    width: 70%;
 
                     p {
                         width: 50%;
@@ -305,9 +285,8 @@ main {
                 }
 
                 .projectTools {
-                    width: 25%;
+
                     display: flex;
-                    flex-direction: column;
                     justify-content: space-around;
                     align-items: center;
 
@@ -361,7 +340,7 @@ footer {
 
 @media screen and (max-width: 800px) {
     * {
-        font-size: 85%;
+        font-size: 100%;
     }
 
     header {
@@ -397,6 +376,21 @@ footer {
             width: 50%;
         }
     }
+
+    .project {
+        width: 100%;
+        padding: 20px;
+
+        .projectMain {
+            width: 80%;
+        }
+
+        .projectTools {
+            width: 15%;
+            flex-direction: column;
+            justify-content: end;
+        }
+    }
 }
 
 @media screen and (min-width: 801px) {
@@ -426,4 +420,37 @@ footer {
             width: 30%;
         }
     }
+
+    .project {
+        width: 48%;
+
+        &:nth-child(2n) {
+            flex-direction: row;
+
+            .projectMain {
+                border-right: dashed $color2 1px;
+            }
+        }
+
+        &:nth-child(2n+1) {
+            flex-direction: row-reverse;
+
+            .projectMain {
+                border-left: dashed $color2 1px;
+            }
+        }
+
+        .projectMain {
+            width: 70%;
+            flex-direction: column;
+        }
+
+        .projectTools {
+
+            margin-top: 20px;
+            width: 25%;
+            flex-direction: column;
+        }
+    }
+
 }
